# health-tracker

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
backend/: Dockerfile  alembic.ini  auth.py  config.py  crypto.py  database.py  db_models.py  food_classifier.py  food_models.py  gcs.py  main.py  pyproject.toml  run_migrations.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_check_ins.py  003_saved_foods.py  004_saved_food_image_url.py
backend/api/: compose.py  deps.py  mappers.py  ownership.py  photo_storage.py  schemas.py  schemas_auth.py
backend/api/routes/: auth.py  check_ins.py  entries.py  estimate.py  foods.py  goals.py  meals.py  photos.py  settings.py  users.py
backend/tests/: conftest.py  test_api.py  test_auth.py  test_auth_helpers.py  test_check_ins.py  test_crypto.py  test_food_classifier.py  test_mappers.py  test_photo_storage.py
docs/: dashboard-roadmap.txt  nutrition.md  saved-foods-manual-test-plan.md
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  AppRouter.tsx  index.css  main.tsx
frontend/src/context/: AuthContext.tsx  AuthProvider.tsx  ConfirmDialogProvider.tsx  auth-context.ts  confirm-context.ts  useConfirm.ts
frontend/src/data/: mock.ts  mockHealth.ts
frontend/src/hooks/: useCheckInData.ts  useEstimateFlow.ts  useNutritionData.ts
frontend/src/lib/: aggregates.test.ts  aggregates.ts  api.ts  authApi.ts  authenticatedImage.ts  checkIn.test.ts  checkIn.ts  client.ts  composeFoods.test.ts  composeFoods.ts  dates.test.ts  dates.ts  errors.test.ts  errors.ts  foodEstimate.ts  foodTags.ts  healthAggregates.test.ts  healthAggregates.ts  healthColors.ts  layout.ts  logEntry.test.ts  logEntry.ts  logLabels.ts  mealPhoto.ts  mockEstimator.ts  numericInput.test.ts  numericInput.ts  quickLog.ts  savedFood.test.ts  savedFood.ts  savedMeal.ts  storage.ts
frontend/src/pages/: LoginPage.tsx  OnboardingGoalsPage.tsx  RegisterPage.tsx
frontend/src/types/: foodEstimate.ts  health.ts  (+1 more)
notebooks/: explore.ipynb  food_estimate_vision.ipynb  garmin_health_api_mapping.ipynb
scripts/: garmin_demo.py  seed_db.py
(+53 files in other folders)
