[project]
name = "health-tracker"
version = "0.1.0"
description = "Scripts, notebooks, and investigations for health-tracker"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "health-tracker-backend",
    "garminconnect",
    "readchar",
    "requests",
    "python-dotenv",
    "ipykernel",
    "jupyter",
]

[tool.uv.workspace]
members = ["backend"]

[tool.uv]
package = false

[tool.uv.sources]
health-tracker-backend = { workspace = true }

[dependency-groups]
dev = [
    "pytest",
    "httpx",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
